[package]
name = "example-01-linux-basic"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2018"

[dependencies]
actix-service = "1"
actix-web = "3.0"
# actix-web-static-files = "3"
# actix-web-static-files = { path = "/Volumes/main/projects/actix-web-static-files"}
actix-web-static-files = { git = "https://github.com/kilork/actix-web-static-files.git" }

static-files = "0.2"
mem-helper = { path = "../mem-helper" }

[build-dependencies]
static-files = "0.2"
change-detection = "1"
