[package]
name = "scenario-runner"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.9"

structopt = "0.3"

thiserror = "1"
anyhow = "1"

tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1"
reqwest = "0.11.4"
futures = "0.3"
async-recursion = "0.3"

num_cpus = "1"